--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["test"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,12 +25,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.5.0
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install and run auto-changelog
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          npm install -g auto-changelog
+          auto-changelog
+
+      - name: View auto-changelog
+        run: cat CHANGELOG.md
