--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,14 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.0
 
+      - name: Git config
+        env:
+          CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
+          CI_EMAIL: ${{ secrets.YOUR_GITHUB_EMAIL }}
+        run: |
+          git config --local user.email "$CI_EMAIL"
+          git config --local user.name "$CI_USER"
+
       - name: Add tags
         run: |
           git tag -a v1.2.4 -m "v1.2.4"
