--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,12 +29,9 @@ jobs:
         uses: actions/setup-node@v3.5.0
 
       - name: Git config
-        env:
-          CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
-          CI_EMAIL: ${{ secrets.YOUR_GITHUB_EMAIL }}
         run: |
-          git config --local user.email "$CI_EMAIL"
-          git config --local user.name "$CI_USER"
+          git config --local user.email ${{ secrets.YOUR_GITHUB_EMAIL }}
+          git config --local user.name ${{ secrets.YOUR_GITHUB_USER }}
           git tag -a v1.2.4 -m "v1.2.4"
 
       - name: Install and run auto-changelog
