--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          fetch_depth: 3
+          fetch-depth: 3
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.0
