--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 3
+          fetch-depth: 0
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.0
@@ -40,7 +40,7 @@ jobs:
       - name: Install and run auto-changelog
         run: |
           npm install -g auto-changelog
-          auto-changelog
+          auto-changelog --commit-limit false --sort-commits date-desc
 
-      - name: View auto-changelog
-        run: cat CHANGELOG.md
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9.1.0
