--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Git config
         run: |
           git log
-          git config --local user.email htetnaing.aung@squirro.com
-          git config --local user.name freddyz01
+          git config --local user.email ${{github.event.pusher.email}}
+          git config --local user.name ${{github.event.pusher.name}}
           git tag -a v1.2.4 -m "v1.2.4"
 
       - name: Install and run auto-changelog
