--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,7 @@ jobs:
           git config --local user.email ${{github.event.pusher.email}}
           git config --local user.name ${{github.event.pusher.name}}
           git tag -a v1.3.4 -m "v1.3.4"
+          git push origin --tags
 
       - name: Install and run auto-changelog
         run: |
